* 完善 增加邮箱的校验 * 完善 可以看到自己的审核未通过的评论 * 修复 回复楼无法隐藏 * 新增 评论管理中可以置顶评论

--- a/src/js/utils/i18n/zh-HK.json
+++ b/src/js/utils/i18n/zh-HK.json
@@ -4,6 +4,8 @@
   "ADMIN_COMMENT_HIDE": "隱藏",
   "ADMIN_COMMENT_IS_SPAM_SUFFIX": " (已隱藏)",
   "ADMIN_COMMENT_SHOW": "顯示",
+  "ADMIN_COMMENT_TOP": "置顶",
+  "ADMIN_COMMENT_UNTOP": "取消置顶",
   "ADMIN_COMMENT_VIEW": "查看",
   "ADMIN_CONFIG": "配置管理",
   "ADMIN_CONFIG_CATEGORY_COMMON": "通用",
@@ -17,9 +19,9 @@
   "ADMIN_CONFIG_ITEM_COMMENT_BG_IMG": "評論框自定義背景圖片 URL 地址。",
   "ADMIN_CONFIG_ITEM_COMMENT_PAGE_SIZE": "評論列表分頁大小，預設為 8。",
   "ADMIN_CONFIG_ITEM_COMMENT_PLACEHOLDER": "評論框提示信息，可用<br>換行，預設為空",
+  "ADMIN_CONFIG_ITEM_DEFAULT_GRAVATAR": "預設的頭像顯示。預設值為 \"identicon\"，可選： 404、mp、identicon、monsterid、wavatar、retro、robohash、blank",  
   "ADMIN_CONFIG_ITEM_EMOTION_CDN": "表情 CDN，預設為：https://cdn.jsdelivr.net/gh/imaegoo/emotion/owo.json",
   "ADMIN_CONFIG_ITEM_GRAVATAR_CDN": "自定義頭像 CDN 地址。如：cn.gravatar.com, sdn.geekzu.org, gravatar.loli.net，預設：cn.gravatar.com",
-  "ADMIN_CONFIG_ITEM_DEFAULT_GRAVATAR": "預設的頭像顯示。預設值為 \"identicon\"，可選： 404、mp、identicon、monsterid、wavatar、retro、robohash、blank",  
   "ADMIN_CONFIG_ITEM_HIDE_ADMIN_CRYPT": "隱藏管理面板入口。可設定一個“暗號”，只有在“暱稱”一欄輸入相同的“暗號”時，管理面板入口才會顯示，留空則不隱藏管理入口",
   "ADMIN_CONFIG_ITEM_HIGHLIGHT": "啟用代碼高亮功能。如果您的主題和代碼高亮有衝突，請設為 false。預設：true",
   "ADMIN_CONFIG_ITEM_HIGHLIGHT_THEME": "代碼高亮主題，可選：default、coy、dark、funky、okaidia、solarizedlight、tomorrow、twilight，訪問 https://prismjs.com 可預覽主題效果。如果您的主題和代碼高亮有衝突，請設為 none。預設：none",
@@ -91,6 +93,8 @@
   "COMMENT_EXPAND": "展開",
   "COMMENT_MASTER_TAG": "博主",
   "COMMENT_REPLIED": "回覆",
+  "COMMENT_REVIEWING_TAG": "审核中",
+  "COMMENT_TOP_TAG": "置顶",
   "META_INPUT_LINK": "網址",
   "META_INPUT_MAIL": "郵箱",
   "META_INPUT_NICK": "暱稱",
