--- a/src/js/utils/i18n/zh-CN.json
+++ b/src/js/utils/i18n/zh-CN.json
@@ -4,6 +4,8 @@
   "ADMIN_COMMENT_HIDE": "隐藏",
   "ADMIN_COMMENT_IS_SPAM_SUFFIX": " (已隐藏)",
   "ADMIN_COMMENT_SHOW": "显示",
+  "ADMIN_COMMENT_TOP": "置顶",
+  "ADMIN_COMMENT_UNTOP": "取消置顶",
   "ADMIN_COMMENT_VIEW": "查看",
   "ADMIN_CONFIG": "配置管理",
   "ADMIN_CONFIG_CATEGORY_COMMON": "通用",
@@ -17,9 +19,9 @@
   "ADMIN_CONFIG_ITEM_COMMENT_BG_IMG": "评论框自定义背景图片 URL 地址。",
   "ADMIN_CONFIG_ITEM_COMMENT_PAGE_SIZE": "评论列表分页大小，默认为 8。",
   "ADMIN_CONFIG_ITEM_COMMENT_PLACEHOLDER": "评论框提示信息，可用<br>换行，默认为空",
+  "ADMIN_CONFIG_ITEM_DEFAULT_GRAVATAR": "默认的头像显示。默认值为 \"identicon\"，可选： 404、mp、identicon、monsterid、wavatar、retro、robohash、blank",  
   "ADMIN_CONFIG_ITEM_EMOTION_CDN": "表情 CDN，默认为：https://cdn.jsdelivr.net/gh/imaegoo/emotion/owo.json",
   "ADMIN_CONFIG_ITEM_GRAVATAR_CDN": "自定义头像 CDN 地址。如：cn.gravatar.com, sdn.geekzu.org, gravatar.loli.net，默认：cn.gravatar.com",
-  "ADMIN_CONFIG_ITEM_DEFAULT_GRAVATAR": "默认的头像显示。默认值为 \"identicon\"，可选： 404、mp、identicon、monsterid、wavatar、retro、robohash、blank",  
   "ADMIN_CONFIG_ITEM_HIDE_ADMIN_CRYPT": "隐藏管理面板入口。可设置一个“暗号”，只有在“昵称”一栏输入相同的“暗号”时，管理面板入口才会显示，留空则不隐藏管理入口",
   "ADMIN_CONFIG_ITEM_HIGHLIGHT": "启用代码高亮功能。如果您的主题和代码高亮有冲突，请设为 false。默认：true",
   "ADMIN_CONFIG_ITEM_HIGHLIGHT_THEME": "代码高亮主题，可选：default、coy、dark、funky、okaidia、solarizedlight、tomorrow、twilight，访问 https://prismjs.com 可预览主题效果。如果您的主题和代码高亮有冲突，请设为 none。默认：none",
@@ -91,6 +93,8 @@
   "COMMENT_EXPAND": "展开",
   "COMMENT_MASTER_TAG": "博主",
   "COMMENT_REPLIED": "回复",
+  "COMMENT_REVIEWING_TAG": "审核中",
+  "COMMENT_TOP_TAG": "置顶",
   "META_INPUT_LINK": "网址",
   "META_INPUT_MAIL": "邮箱",
   "META_INPUT_NICK": "昵称",
